Closed Bug 1894745 Opened 1 year ago Closed 1 year ago

Typo in nsRFPService.cpp, noticable -> noticeable

Categories

(Core :: Privacy: Anti-Tracking, defect)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: fkilic, Assigned: fkilic)

Details

Attachments

(1 file)

There's a typo at toolkit/components/resistfingerprinting/nsRFPService.cpp#413 where noticeable was written as noticable.

Expected Result: noticable should be replaced with noticeable.
Actual Result: noticeable is misspelled.

Assignee: nobody → fkilic
Pushed by tritter@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/37b3e8a42399 Fixed typo, noticable -> noticeable. r=tjr DONTBUILD
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: